Update and publish

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </nav>
 
       <div class="container">
-        <h3>Level-Up</h3>
+        <h3 class="blog-post">Level-Up</h3>
           <div class="panel panel-default">
             <div class="panel-body">
               <div class="list level-up">
