--- a/write-application-in-functional-language/index.html
+++ b/write-application-in-functional-language/index.html
@@ -8,8 +8,8 @@
         
     <meta property="og:title" content="3- Write an application in a functional language" />
     <meta property="og:description" content="1/ Built a data management platform in Clojure
-2/ Currently working on a Clojure side project
-3/ Using Java 8 and Vavr on the Copernicus Data and Information Access Services" />
+2/ Still working on a Clojure side project(s)
+3/ Used Java 8-&gt;11 and Vavr on the Copernicus Data and Information Access Services" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://level-up.arnaudbos.com/write-application-in-functional-language/" />
     
@@ -85,9 +85,9 @@
             <div class="blogpost">
               <p>1/ Built a data management platform in Clojure</p>
 
-<p>2/ Currently working on a Clojure side project</p>
+<p>2/ Still working on a Clojure side project(s)</p>
 
-<p>3/ Using Java 8 and Vavr on the Copernicus Data and Information Access Services</p>
+<p>3/ Used Java 8-&gt;11 and Vavr on the Copernicus Data and Information Access Services</p>
 
               <hr>
               <div class="related-posts">
