--- a/write-nontrivial-data-intensive-app/index.html
+++ b/write-nontrivial-data-intensive-app/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="map[]" />
         
     <meta property="og:title" content="1- Write a nontrivial data intensive system" />
-    <meta property="og:description" content="1/ Building the data management subsystem of the Copernicus Data and Information Access Services (DIAS),
-a European cloud service for image processing" />
+    <meta property="og:description" content="1/ Built the data management subsystem of the Copernicus Data and Information Access Services (DIAS),
+a European cloud service for image processing (now called Sobloo)." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://level-up.arnaudbos.com/write-nontrivial-data-intensive-app/" />
     
@@ -82,8 +82,8 @@ a European cloud service for image processing" />
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="blogpost">
-              <p>1/ Building the data management subsystem of the Copernicus Data and Information Access Services (DIAS),<br />
-a European cloud service for image processing</p>
+              <p>1/ Built the data management subsystem of the Copernicus Data and Information Access Services (DIAS),<br />
+a European cloud service for image processing (now called Sobloo).</p>
 
               <hr>
               <div class="related-posts">
