Update and publish

--- a/deliver-training-course/index.html
+++ b/deliver-training-course/index.html
@@ -7,8 +7,10 @@
     <meta name="author" content="map[]" />
         
     <meta property="og:title" content="1- Deliver a training course" />
-    <meta property="og:description" content="1/ Gave Android and JavaScript training courses.
-2/ Flink coach during the MonkeyTechDay #6 &ldquo;Flink vs Kafka Streams&rdquo;." />
+    <meta property="og:description" content="1/ Gave Android and JavaScript training courses (pre-2018).
+2/ Flink coach during the MonkeyTechDay #6 (2018) &ldquo;Flink vs Kafka Streams&rdquo;.
+3/ Clojure trainer at Voxxed Days Cluj-Napoca 2019.
+3/ Kafka &amp; Kafka Streams trainer at Snowcamp Grenoble 2020." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://level-up.arnaudbos.com/deliver-training-course/" />
     
@@ -82,9 +84,13 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="blogpost">
-              <p>1/ Gave Android and JavaScript training courses.</p>
+              <p>1/ Gave Android and JavaScript training courses (pre-2018).</p>
 
-<p>2/ Flink coach during the MonkeyTechDay #6 &ldquo;Flink vs Kafka Streams&rdquo;.</p>
+<p>2/ Flink coach during the MonkeyTechDay #6 (2018) &ldquo;Flink vs Kafka Streams&rdquo;.</p>
+
+<p>3/ Clojure trainer at Voxxed Days Cluj-Napoca 2019.</p>
+
+<p>3/ Kafka &amp; Kafka Streams trainer at Snowcamp Grenoble 2020.</p>
 
               <hr>
               <div class="related-posts">
