--- a/host-user-group/index.html
+++ b/host-user-group/index.html
@@ -7,8 +7,7 @@
     <meta name="author" content="map[]" />
         
     <meta property="og:title" content="5- Host a user group" />
-    <meta property="og:description" content="1/ Flink coach during the MonkeyTechDay #6 &ldquo;Flink vs Kafka Streams&rdquo;.
-2/ Host of the monthly Toulouse JUG where I handle most of the planning and content production sutff." />
+    <meta property="og:description" content="Toulouse JUG Leader since late 2018." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://level-up.arnaudbos.com/host-user-group/" />
     
@@ -82,9 +81,7 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="blogpost">
-              <p>1/ Flink coach during the MonkeyTechDay #6 &ldquo;Flink vs Kafka Streams&rdquo;.</p>
-
-<p>2/ Host of the monthly Toulouse JUG where I handle most of the planning and content production sutff.</p>
+              <p>Toulouse JUG Leader since late 2018.</p>
 
               <hr>
               <div class="related-posts">
