--- a/write-application-in-functional-language/index.html
+++ b/write-application-in-functional-language/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="3- Write an application in a functional language" />
     <meta property="og:description" content="1/ Built a data management platform in Clojure
 2/ Still working on a Clojure side project(s)
-3/ Used Java 8-&gt;11 and Vavr on the Copernicus Data and Information Access Services" />
+3/ Used Java 8-&gt;11, Vavr, Reactor, etc, heavily for the Space industry" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://level-up.arnaudbos.com/write-application-in-functional-language/" />
     
@@ -87,7 +87,7 @@
 
 <p>2/ Still working on a Clojure side project(s)</p>
 
-<p>3/ Used Java 8-&gt;11 and Vavr on the Copernicus Data and Information Access Services</p>
+<p>3/ Used Java 8-&gt;11, Vavr, Reactor, etc, heavily for the Space industry</p>
 
               <hr>
               <div class="related-posts">
