--- a/write-application-in-object-oriented-language/index.html
+++ b/write-application-in-object-oriented-language/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="1- Write an application in an object-oriented language" />
     <meta property="og:description" content="1/ Lead dev Python at Adaptive
 2/ Worked on a mutual health insurance in Java 7
-3/ Built the datastore of the Copernicus Data and Information Access Services in Java 8-&gt;11" />
+3/ Built a Java 8-&gt;11 application for the Space industry" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://level-up.arnaudbos.com/write-application-in-object-oriented-language/" />
     
@@ -87,7 +87,7 @@
 
 <p>2/ Worked on a mutual health insurance in Java 7</p>
 
-<p>3/ Built the datastore of the Copernicus Data and Information Access Services in Java 8-&gt;11</p>
+<p>3/ Built a Java 8-&gt;11 application for the Space industry</p>
 
               <hr>
               <div class="related-posts">
