--- a/write-application-in-prototype-based-language/index.html
+++ b/write-application-in-prototype-based-language/index.html
@@ -8,7 +8,7 @@
         
     <meta property="og:title" content="2- Write an application in a prototype-based language" />
     <meta property="og:description" content="1/ Worked on the JavaScript/AngularJS frontend part of a mutual health insurance
-2/ Don&rsquo;t want to do it again, ever" />
+2/ Don&rsquo;t want to do it again. Ever." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://level-up.arnaudbos.com/write-application-in-prototype-based-language/" />
     
@@ -84,7 +84,7 @@
             <div class="blogpost">
               <p>1/ Worked on the JavaScript/AngularJS frontend part of a mutual health insurance</p>
 
-<p>2/ Don&rsquo;t want to do it again, ever</p>
+<p>2/ Don&rsquo;t want to do it again. Ever.</p>
 
               <hr>
               <div class="related-posts">
